--- a/env.yaml
+++ b/env.yaml
@@ -3,4 +3,4 @@ SELENIUM_HOST: localhost
 SELENIUM_PORT: 4444
 
 #tested app
-BASE_URL: http://starbugs-qa.vercel.com
+BASE_URL: http://starbugs-qa.vercel.app
