--- a/.github/workflows/action.yaml
+++ b/.github/workflows/action.yaml
@@ -42,7 +42,7 @@ jobs:
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v2
         with:
-          path: ./logs/
+          path: logs/
 
       - name: Deploy to GitHub Pages
         uses: actions/deploy-pages@v2
