--- a/.github/workflows/action.yaml
+++ b/.github/workflows/action.yaml
@@ -36,13 +36,19 @@ jobs:
     runs-on: ubuntu-latest
     needs: test 
     steps:
+
+      - uses: actions/upload-artifact@v3
+        with:
+          name: directory-content
+          path: ./logs/
+
       - name: Configure GitHub Pages
         uses: actions/configure-pages@v3
 
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v2
         with:
-          path: logs/
+          path: ./logs/
 
       - name: Deploy to GitHub Pages
         uses: actions/deploy-pages@v2
