--- a/.github/workflows/action.yaml
+++ b/.github/workflows/action.yaml
@@ -31,16 +31,11 @@ jobs:
         run: mkdir logs
       - name: Run tests
         run: bundle exec cucumber
-  # Deploy to GitHub Pages
-  deploy:
-    runs-on: ubuntu-latest
-    needs: test 
-    steps:
 
       - uses: actions/upload-artifact@v3
         with:
           name: directory-content
-          path: ./logs/
+          path: logs/
 
       - name: Configure GitHub Pages
         uses: actions/configure-pages@v3
@@ -48,7 +43,7 @@ jobs:
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v2
         with:
-          path: ./logs/
+          path: logs/
 
       - name: Deploy to GitHub Pages
         uses: actions/deploy-pages@v2
