--- a/.github/workflows/action.yaml
+++ b/.github/workflows/action.yaml
@@ -7,7 +7,10 @@ on:
 jobs:
   test:
     runs-on: ubuntu-latest
-
+    
+    permissions:
+      id-token: write
+    
     steps:
       - uses: actions/checkout@v4
 
