--- a/.github/workflows/action.yaml
+++ b/.github/workflows/action.yaml
@@ -11,6 +11,7 @@ jobs:
     permissions:
       id-token: write
       pages: write
+      contents: read
     
     steps:
       - uses: actions/checkout@v4
